# pet_project

./: .gitignore
backend/: .pre-commit-config.yaml  Makefile  poetry.toml  pyproject.toml
backend/src/: main.py
